# arams

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.github/: dependabot.yaml
.github/workflows/: build-test.yaml  deploy-pages.yaml  deploy.yaml  publish-wasm.yaml  release-cli.yaml  release.yaml
crates/arams-cli/: Cargo.toml
crates/arams-cli/src/: args.rs  constants.rs  errors.rs  fs.rs  main.rs
crates/arams-core/: Cargo.toml
crates/arams-core/benches/: factorial.rs
crates/arams-core/src/: errors.rs  lib.rs  machine.rs  program.rs  source_code.rs
crates/arams-core/src/compiler/: mod.rs  parser.rs  token.rs  tokenizer.rs
crates/arams-core/src/lsp/: analyzer.rs  errors.rs  mod.rs  token.rs
crates/arams-core/src/runtime/: executor.rs  machine.rs  mod.rs
crates/arams-core/src/tests/: parser.rs
crates/arams-core/src/tokenizer/: mod.rs
crates/arams-core/tests/: compile.rs  integration.rs  lsp.rs
crates/arams-wasm/: Cargo.toml  arams.d.ts  package.json
crates/arams-wasm/src/: conversions.rs  lib.rs
crates/arams-wasm/src/api/: analyze.rs  mod.rs  run.rs
crates/arams-wasm/src/models/: errors.rs  machine.rs  mod.rs  results.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: args.rs  constants.rs  main.rs
crates/core/: Cargo.toml  NOTES.md
crates/core/src/: errors.rs  lib.rs  machine.rs  program.rs  source_code.rs
crates/core/src/executor/: execute.rs
crates/core/src/parser/: parse.rs
crates/core/src/tests/: mod.rs  tokenize.rs
crates/core/src/tokenizer/: mod.rs  token.rs  tokenize.rs
crates/core/tests/: integration.rs
docs/: cli.md  language-spec.md  ram-spec.md  wasm.md
docs/assets/: language-grammer.rdd
examples/: factorial-of-5.sh  factorial.txt
web/: .gitignore  .npmrc  arams.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.tsx
web/src/components/: theme-toggle.tsx  wasm-test.tsx
web/src/components/editor/: index.tsx  line.tsx  token.tsx
web/src/components/icons/: index.tsx
web/src/components/layout/: footer.tsx  header.tsx  section-code.tsx  section-machine.tsx
web/src/components/ui/: button.tsx  card.tsx  seperator.tsx  spacer.tsx  table.tsx
web/src/context/: theme.tsx
web/src/lib/: arams.ts  utils.ts
web/src/stores/: arams.ts
web/src/styles/: globals.css
