[package]
name = "arams-core"
description = "Core logic of the random-access machine (RAM) simulation"
authors = ["Christian Fuchte"]
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "factorial"
path = "benches/factorial.rs"
harness = false

[[bench]]
name = "lsp"
path = "benches/lsp.rs"
harness = false
