[package]
name = "arams-wasm"
description = "WASM bindings for the random-access machine (RAM) simulation"
authors = ["Christian Fuchte"]
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.106"
core = { workspace = true }
