[package]
name = "arams-wasm"
description = "WASM bindings for the random-access machine (RAM) simulation"
authors = ["Christian Fuchte"]
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "arams_wasm"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.106"
arams-core = { workspace = true }
