[package]
name = "arams-wasm"
description = "WASM bindings for the random-access machine (RAM) simulation"
authors = ["Christian Fuchte"]
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "arams_wasm"
crate-type = ["cdylib"]

[dependencies]
arams-core = { workspace = true }
wasm-bindgen = "0.2.106"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
