[package]
name = "cli"
description = "CLI for executing code inside of the random-access machine (RAM) simulation"
authors = ["Christian Fuchte"]
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "arams"
path = "src/main.rs"

[dependencies]
core = { workspace = true }
clap = { version = "4.5.53", features = ["cargo"] }

[build-dependencies]
chrono = "0.4.42"
